# MiniShader

./: .gitignore  CMakeLists.txt  READMD  README.md  TODO.md  ThreadPool.h  Vector3f.h  boundingbox.h  build.sh  camera.h  deprecated_sceneloader.txt  group.h  hdrloader.cpp  hit.h  image.cpp  image.h  light.h  main.cpp  material.h  object.h  plane.h  polygon.h  polysolver.h  ray.h  rotate_bspline.h  runtime.h  scene.h  sceneloader.h  server.h  sphere.h  summary.txt  test.html  texture.h  triangle.h  utils.h  vecmath.h  webclient.html
scenes/: alg.py  classroom.py  classroom_texture.py  colorful.py  cornell_box.py  cornell_box_glass.py  cornell_box_mirror.py  doftest.py  glass.py  glassw.py  inside.py  light_texture.py  light_texture_hdr.py  many_balls.py  mis_test.py  rabbit.py  rabbit_small.py  scene.json  scene_2.py  scene_3.py  scene_4.py  scene_helper.py  simple_balls.py  simple_box.py  water.py  wineglass.py
