cmake_minimum_required (VERSION 2.6)
PROJECT(MiniShader)
SET(CMAKE_CXX_FLAGS "-lpthread -O3 -march=native -mtune=native -std=c++11")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/asio-1.12.2/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
ADD_EXECUTABLE(MiniShader main.cpp Matrix2f.cpp Matrix3f.cpp Matrix4f.cpp Quat4f.cpp Vector2f.cpp Vector3f.cpp Vector4f.cpp hdrloader.cpp)
target_link_libraries(MiniShader pthread)
